kubernetes/kustomize/circle-partner-navigator/components/express-mail-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-mail-gateway
spec:
  selector:
    app: express-mail-gateway
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
